# neurons.me

./: .gitignore  .gitmodules  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  serve.json
docs/: Arquitectura.md  Building_Neural_Networks.md  Namespace Resolution Protocol.md  meFullReadme.md
docs/en/: .me — Semantic Architecture Spec (v1.1).md  Namespace Resolution Protocol.md  QuickStart.md  neurons.me.md
docs/es/: Arquitectura.md  Redes Definidas por Significado (SDM).md
domains/@.neurons.me/: index.html
domains/@.neurons.me/src/: main.jsx
domains/_.neurons.me/rootDomain/: package-lock.json
domains/_.neurons.me/rootDomain/dist2/: index.html
domains/docs.neurons.me/DeepLearning/: Data.md  Glossary.md  Logistic Regression Models.md
domains/docs.neurons.me/public/netget/: NetGet.html  NetGetX.printCertbotLogs.html  README.md  global.html  index.html  module-NetGetX.Config.html  module-NetGetX.Domains.html  module-NetGetX.NginxConfiguration.html  module-NetGetX.NginxPaths.html  module-NetGetX.OpenResty.html  module-NetGetX.SSL.html  module-NetGetX.Utils.html  module-NetGetX.html  module-NetGetX.module_NetGetX.html  module-NetGetX.module_NetGetX_NginxPaths.html  (+51 more)
domains/media.neurons.me/: README.md  package-lock.json
src/crate/: .gitignore  Cargo.toml  README.md
src/crate/src/: lib.rs  main.rs
src/crate/src/Gematria/: logic.rs
src/pip/: .gitignore  .pypirc
www/: package.json  vite.config.js
www/@/src/: main.jsx
www/docs/notes/: Glossary.md
www/server/ws/: videoServer.js
www/src/: modules.js  vite.config.js
(+5 files in other folders)
