[package]
name = "neurons-me"
version = "0.1.1"
edition = "2021"
authors = ["suiGn <info@neurons.me>"]
description = "Neurons.me Rust Ecosystem – enabling deep learning processes and modular neural computation."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/neurons.me"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["neurons", "daemon", "modular", "deepLearning", "decentralized"]
categories = ["network-programming", "command-line-utilities", "deep-learning"]
exclude = ["target/*", ".gitignore", ".vscode/*"]
[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tracing = "0.1"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"